Fix/infinite-loading-when-user-do-not-share-loc
- Added using the useGeoLocation hook for loading. Previously, when the user did not usre the geolocation there would never be dispatched an action to the store. This resulted in the default true value for loading never get updated to false.
    - Updated the default value for loading in the WeatherSlice to be false
- Fixed a bug where the goals container had extra padding, resulting in unused whitespace.
- Fixed typos in the index.css
- Changed the alt_description for images to be optional as it is not always provided and set a default alt_description.

--- a/src/features/goals/goals.module.css
+++ b/src/features/goals/goals.module.css
@@ -8,7 +8,7 @@
   width: min(80vw, 900px);
   height: 60vh;
 
-  padding: 0 var(--space-s);
+  padding: 0;
   margin: 0 auto;
 }
 
